--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ footer {
 }
 
 .page-header-volunteer {
-	background: url(img/volunteer/banner.png) no-repeat;
+	background: url(img/volunteer/volunteersbanner.png) no-repeat;
 	padding: 70px 0;
     margin-top: 50px;
 }
