--- a/style.css
+++ b/style.css
@@ -561,3 +561,339 @@ width: 85%;
   right: 20px;
   display: none;
 }
+
+
+
+
+/** {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif
+}*/
+
+/*.content {
+    width: 100vw;
+    min-height: 100vh
+} */
+
+ .spin {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    box-shadow: 2px 15px 20px #1f1f1f10, -2px -8px 20px #1f1f1f1a
+} 
+
+.spin .rollers {
+    flex: 0 0 230px
+}
+
+.spin .start-roller {
+    left: 0;
+    top: 0;
+    background-image: linear-gradient(to right, white 30%, #ffffff00)
+}
+
+.spin .start-roller,
+.spin .end-roller {
+    height: 100%;
+    width: 40px;
+    position: absolute;
+    z-index: 1
+}
+
+.spin .end-roller {
+    right: 0;
+    top: 0;
+    background-image: linear-gradient(to left, white 30%, rgba(255, 255, 255, 0))
+}
+
+.spin .rollers .wrapper {
+    position: relative;
+    width: 1400px;
+    height: 100px;
+    margin: 0 0 20px 0;
+    flex: 0 0 auto
+}
+
+.spin .rollers .wrapper .items-container {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear
+}
+
+.spin .rollers .wrapper .items-container.roll-LL {
+    animation-name: roll
+}
+
+.spin .rollers .wrapper .items-container.roll-RL {
+    animation-name: roll-reverse;
+    left: 100%
+}
+
+.spin .rollers .wrapper .items-container.reverse-roll-LL {
+    animation-name: roll-clockwise;
+    left: -100%
+}
+
+.spin .rollers .wrapper .items-container.reverse-roll-RL {
+    animation-name: roll-reverse-clockwise;
+    left: 100%
+}
+
+@keyframes roll {
+    0% {
+        left: 0%
+    }
+
+    100% {
+        left: -100%
+    }
+}
+
+
+@keyframes roll-reverse {
+    0% {
+        left: 100%
+    }
+
+    100% {
+        left: 0%
+    }
+}
+
+@keyframes roll-clockwise {
+    0% {
+        left: -100%
+    }
+
+    100% {
+        left: 0%
+    }
+}
+
+@keyframes roll-reverse-clockwise {
+    0% {
+        left: 0%
+    }
+
+    100% {
+        left: 100%
+    }
+}
+
+.spin .rollers .wrapper .items-container .item {
+    flex: 1 1 200px;
+    min-width: 0;
+    margin: 20px
+}
+
+.spin .rollers .wrapper .items-container .item .company {
+    filter: grayscale(100%);
+    opacity: 0.2;
+    width: 100%;
+    object-fit: contain
+}
+
+.spin .rollers .wrapper .items-container .item .company:hover {
+    filter: grayscale(0%);
+    opacity: 1;
+    cursor: pointer
+}
+
+.spin img {
+    vertical-align: middle
+}
+
+@media (max-width: 575.5px) {
+    .content {
+        padding: 20px
+    }
+
+    .content .spin {
+        padding: 20px
+    }
+
+    .h3 {
+        font-size: calc(1.1rem + .6vw)
+    }
+
+    .fs-5 {
+        font-size: 0.9rem !important
+    }
+
+    .spin .rollers .wrapper .items-container .item .company {
+        opacity: 0.4
+    }
+}
+
+/* chat- pop up */
+
+span {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.container {
+    
+  justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;   
+}
+.flex{
+    display: flex;
+}
+
+.chat {
+    height: 500px;
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+  justify-content: center;
+    align-items: center;
+} 
+
+::-webkit-input-placeholder { 
+    color: .711 
+}
+ 
+input { 
+    border: 0; 
+    padding: 15px; 
+    margin-left: auto;
+    border-radius: 10px;
+    width: 100%; 
+    border-color: black;
+}
+
+.messages {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+}
+
+#bot {
+    margin-left: auto;
+}
+
+.bot {
+    font-family: Consolas, 'Courier New', Menlo, source-code-pro, Monaco,  
+    monospace;
+}
+
+.avatar {
+    height: 25px;
+}
+
+.response {
+    display: flex;
+    align-items: center;
+    margin: 1%;
+}
+
+
+/* Mobile */
+
+@media only screen and (max-width: 980px) {
+  .container {
+        flex-direction: column; 
+        justify-content: flex-start;
+    }
+    .chat {
+        width: 75vw;
+        margin: 10vw;
+    }
+}
+
+/* UI */
+.chat-btn {
+    position: fixed;
+    right: 14px;
+    bottom: 30px;
+    cursor: pointer
+}
+
+.chat-btn .close {
+    display: none
+}
+
+.chat-btn i {
+    transition: all 0.9s ease
+}
+
+#check:checked~.chat-btn i {
+    display: block;
+    pointer-events: auto;
+    transform: rotate(180deg)
+}
+
+#check:checked~.chat-btn .comment {
+    display: none
+}
+
+.chat-btn i {
+    font-size: 22px;
+    color: white; !important
+}
+
+.chat-btn {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background-color: green;
+    color: white;
+    font-size: 22px;
+    border: none
+}
+
+.chatblock {
+    position: fixed;
+    right: 40px;
+    bottom: 100px;
+    width: 300px;
+    height: 630px;
+    background-color: #fff;
+    border-radius: 5px;
+    opacity: 0;
+    transition: all 0.4s
+}
+
+#check:checked~.chatblock {
+    opacity: 1
+}
+
+.header {
+    padding: 13px;
+    background-color: green;
+    border-radius: 5px 5px 0px 0px;
+    margin-bottom: 10px;
+    color: white;
+}
+
+.chat-form {
+    padding: 15px
+}
+
+.chat-form textarea {
+    resize: none
+}
+
+.form-control:focus,
+.btn:focus {
+    box-shadow: none
+}
+
+#check {
+    display: none !important
+}
