--- a/style.css
+++ b/style.css
@@ -169,9 +169,6 @@ footer {
 	background-color: #E6D88A;
 }
 
-
-
-
 .page-header-pmrinews {
 	background: url(img/news/news.png);
 	padding: 70px 0;
@@ -453,7 +450,6 @@ display:none;
   width: 100%;
   height: 0;
   transition: .5s ease;
-
 }
 
 .mov:hover .overlay {
@@ -472,6 +468,21 @@ display:none;
   text-align: center;
 }
 
+.block p{
+     color: #595756;
+  font-size: 22px;
+  position: absolute;
+  margin: 0;
+  -webkit-transform: scale(.7);
+    -ms-transform: scale(.7);
+    transform: scale(.7);
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+  line-height: 1.2;
+  text-align: justify-all;
+  text-align: center;
+}
+
 .cir {
 position: relative;
 width: 85%;
@@ -480,13 +491,15 @@ width: 85%;
 .ciroverlay {
 	
   position: absolute;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0,0,0,0.7);
-  overflow: hidden;
-  width: 100%;
   height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #d5d4d2;
   -webkit-transform: scale(0);
   -ms-transform: scale(0);
   transform: scale(0);
@@ -498,6 +511,8 @@ width: 85%;
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
+  opacity: 1;
+
 }
 
 .animated-circle.arrow  {
@@ -513,7 +528,7 @@ width: 85%;
 	top: 50%;
 }
 
-.animated-circle.arrow:hover {
+.cir:hover .animated-circle.arrow {
 	-webkit-transform: translateX(5px);
 	-ms-transform: translateX(5px);
 	transform: translateX(5px);
@@ -538,8 +553,6 @@ width: 85%;
   right: 20px;
   display: none;
 }
-
-
 
 
 /** {
@@ -1015,4 +1028,129 @@ sign-up:hover, a:hover {
     font-size: 18px ;
     padding: 15px;
     margin: 15px;
+}
+
+/* Glass Box */
+
+
+:root {
+  /*--src: url(img/volunteer/FAQ3.jpg);*/
+  --src: url(img/volunteer/FAQ4.jpg);
+  --size: 250px;
+  --space: 8vmin;
+  --duration: 300ms;
+  --ease-out: cubic-bezier(0.25, 1, 0.5, 1);
+  --bounce-out: cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.promo {
+  position: relative;
+  cursor: pointer;
+  width: var(--size);
+  height: var(--size);
+  padding-left: 180px;
+}
+
+.title {
+  --font-size: calc(var(--size) / 5);
+
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  font-size: var(--font-size);
+  font-weight: 700;
+  line-height: 1.2;
+  white-space: nowrap;
+  transform: translate(-10%, -50%);
+  transition: transform var(--duration) var(--ease-out);
+  pointer-events: none;
+}
+
+.title::after {
+  content: attr(data-cta);
+  display: inline-block;
+  margin-left: 1.5vmin;
+  font-size: calc(var(--font-size) / 3.25);
+  font-weight: 400;
+  letter-spacing: 0.125vmin;
+  opacity: 0;
+  transform: translateX(-25%);
+  transition: transform var(--duration) var(--ease-out),
+    opacity var(--duration) var(--ease-out);
+}
+
+.image-wrapper {
+  width: var(--size);
+  height: var(--size);
+  overflow: hidden;
+  clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 0 50%, 0% 0%);
+  transition: transform var(--duration) var(--ease-out),
+    clip-path var(--duration) var(--ease-out);
+    position: absolute;
+}
+
+.image-wrapper img {
+  position: relative;
+  width: 120%;
+  height: 100%;
+  object-fit: cover;
+  transform: translateX(-10%);
+  transition: transform var(--duration) var(--ease-out);
+}
+
+.image-wrapper::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--overlay-color);
+  mix-blend-mode: multiply;
+  opacity: 0;
+  transform: translateZ(0);
+  transition: opacity var(--duration) var(--ease-out);
+}
+
+.promo:hover img {
+  transform: translateX(0);
+}
+
+.promo:hover .image-wrapper {
+  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+  transform: translateX(25%);
+  transition-timing-function: var(--bounce-out);
+}
+
+.promo:hover .title {
+  transform: translate(5%, -50%);
+  transition-timing-function: var(--bounce-out);
+}
+
+.promo:hover .title::after {
+  opacity: 1;
+  transform: translateX(0);
+  transition-timing-function: var(--bounce-out);
+}
+
+.promo:hover .image-wrapper::after {
+  opacity: 1;
+}
+
+
+.center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 20px;
+  text-align: justify-all;
+  text-align: center;
 }
