--- a/style.css
+++ b/style.css
@@ -32,6 +32,53 @@ html  {
  	color: lightgreen;
 
  }
+
+
+ /*News navbar */
+
+nav {
+position: sticky;
+top: 0;
+background-color: rgba(0, 0, 0, 0.8);
+
+}
+
+nav .container {
+max-width: 1000px;
+margin: 0 auto;
+text-align: center;
+padding: 10px;
+}
+
+nav .container ul li {
+display: inline-block;
+align-items: stretch;
+flex-grow: 1;
+    align-items: stretch;
+    flex-grow: 1;
+    text-align: center
+}
+
+nav .container ul li a {
+display: inline-block;
+text-decoration: none;
+padding: 10px 20px;
+color: white;
+}
+nav .container ul li.active {
+background-color: #c2a35e;
+transition: 0.3s;
+padding: initial;
+}
+/*nav .container ul li.active a {
+color: #ffffff;
+}*/
+
+nav .container ul li a:hover {
+    background-color: #c2a35e !important;
+    color: white;
+}
+
  /* Modify brand and text color */
 
  .navbar-custom .navbar-brand,
@@ -429,6 +476,16 @@ display:none;
 	background-color: #d5d4d2;
 }
 
+.bg-black {
+    background-color: black;
+}
+
+.trending p{
+    color: white;
+    text-align: left;
+    padding-top: 10px;
+}
+
 .mov {
   position: relative;
   
@@ -438,6 +495,7 @@ display:none;
   display: block;
   width: 100%;
   height: auto;
+
 }
 
 .overlay {
@@ -1153,4 +1211,13 @@ sign-up:hover, a:hover {
   font-size: 20px;
   text-align: justify-all;
   text-align: center;
+}
+
+.font {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 20px;
+     top: 50%;
+  left: 50%;
 }
